# OSLabs5-7

./: CMakeLists.txt  Makefile
include/: balanced_tree.hpp  calculation_node.hpp  zmq_functions.hpp
src/: calculation_node.cpp  server.cpp
tests/: tests.cpp
